--- a/MatematicaApp/src/main/AndroidManifest.xml
+++ b/MatematicaApp/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:name="android.hardware.sensor.accelerometer"
         android:required="false"/>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
