--- a/MatematicaApp/build.gradle
+++ b/MatematicaApp/build.gradle
@@ -9,14 +9,14 @@ android {
             storePassword 'Bacanal_46!+1!'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId 'com.sergiocruz.Matematica'
         minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 10
-        versionName "2.9.1"
+        targetSdkVersion 28
+        versionCode 12
+        versionName "3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.config
         vectorDrawables.useSupportLibrary = true
@@ -38,26 +38,38 @@ android {
             signingConfig signingConfigs.config
         }
     }
+
     productFlavors {
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // Glide image library use ->
     // compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.android.support:gridlayout-v7:25.1.1'
-    compile 'com.android.support:support-vector-drawable:25.1.1'
-    compile 'com.google.firebase:firebase-ads:10.0.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'com.google.firebase:firebase-ads:17.1.1'
+    implementation 'com.google.android.ads.consent:consent-library:1.0.6'
+    implementation 'com.android.billingclient:billing:1.2'
+
+
+
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    testImplementation 'junit:junit:4.12'
 }
 
 
