--- a/MatematicaApp/build.gradle
+++ b/MatematicaApp/build.gradle
@@ -48,6 +48,10 @@ android {
     }
 }
 
+ext {
+    SupportLibVersion = "28.0.0"
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -55,16 +59,18 @@ dependencies {
     })
     // Glide image library use ->
     // compile 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:gridlayout-v7:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    implementation 'com.google.firebase:firebase-ads:17.1.1'
-    implementation 'com.google.android.ads.consent:consent-library:1.0.6'
-    implementation 'com.android.billingclient:billing:1.2'
+    implementation "com.android.support:appcompat-v7:$SupportLibVersion"
+    implementation "com.android.support:design:$SupportLibVersion"
+    implementation "com.android.support:support-v4:$SupportLibVersion"
+    implementation "com.android.support:recyclerview-v7:$SupportLibVersion"
+    implementation "com.android.support:cardview-v7:$SupportLibVersion"
+    implementation "com.android.support:gridlayout-v7:$SupportLibVersion"
+    implementation "com.android.support:support-vector-drawable:$SupportLibVersion"
+    implementation "com.google.firebase:firebase-ads:17.1.1"
+    implementation "com.google.android.ads.consent:consent-library:1.0.6"
+    implementation "com.android.billingclient:billing:1.2"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.android.support.constraint:constraint-layout-solver:1.1.3"
 
 
 
