--- a/MatematicaApp/build.gradle
+++ b/MatematicaApp/build.gradle
@@ -6,8 +6,8 @@ android {
         config {
             storeFile file('C:/Users/sergi/AndroidStudioProjects/keystore.jks')
             keyAlias 'androidappskeystore'
-            keyPassword 'Bacanal_46!+1!'
-            storePassword 'Bacanal_46!+1!'
+            keyPassword ''
+            storePassword ''
         }
     }
     compileSdkVersion 28
